--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ names = "^0.3.0"
 rich = "^13.7.0"
 annoy = "^1.17.3"
 openai = "^1.37.0"
+langchain = "^0.2.10"
+langchain-community = "^0.2.9"
+langchain-openai = "^0.1.17"
+faiss-cpu = "^1.8.0.post1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.2"
