--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pydantic = "^2.5.2"
 names = "^0.3.0"
 rich = "^13.7.0"
 openai = "^1.37.0"
+aiohttp = "^3.9.5"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.2"
